<resources>
    <string name="app_name">ELA</string>
    <string name="TextViewTitle1">Welcome to</string>
    <string name="TextViewTitle2"><![CDATA[E-Learning On Arduino & Its Applications]]></string>
    <string name="buttonSubmenu1">INTRO</string>
    <string name="buttonSubmenu2">COMPARISON</string>
    <string name="buttonSubmenu3">APPLICATION</string>
    <string name="title_activity_menu2">MainActivity</string>
    <string name="buttonSubmenu4">ABOUT THE APP</string>
    <string name="textviewSubmenu1_1"><b>1. What is Arduino?</b>
        \n\n Basically, <b>Arduino</b> is an electronic platform that available on both software
        (Arduino IDE) and hardware (Arduino Board). It is open-source and it operated by giving
        instructions (which written with Arduino IDE) to microcontroller of the Arduino board.
        \n\n\t <u>Arduino original inventors:</u>
        \n <b>Massimo Banzi</b> and <b>David Cuartielles</b> at the
        <b>Interaction Design Institute Ivrea (Ivrea, Italy)</b> in 2005.
        \n Arduino software (IDE) was created by <b>David Mellis</b>;
        Inventors joined later:
        \n <b>Gianluca Martino</b> and <b>Tom Igoe</b> \n </string>
    <string name="textviewSubmenu1_1_1">
        \n<b>2.  Arduino Hardware (Arduino Board)</b>\n
        \n Arduino Board is an electronic circuit board which embedded with microcontroller which
        it can be used to read inputs (such as light received by light sensors, finger triggered on
        button) and produce outputs (such as turn on LED, activate motor).
        \n Usually it used in electronic project as a main component to control its whole activity. \n
        \n\n <b>Popular types of Arduino boards:</b> \n</string>
    <string name="arduinounor3">arduino_unor3</string>
    <string name="arduino_uno_r3">arduino_unor3</string>
    <string name="arduino_uno_textview1"><b>Arduino UNO R3</b>
        \n Suggested Link to buy:
        \n <a href="https://store.arduino.cc/usa/arduino-uno-rev3">[Arduino Official]</a>
        \n [Cytron Malaysia]
        \n <a href="https://my.cytron.io/p-starter-kit-for-arduino-uno">[Starter Kit]</a>
        \n <a href="https://my.cytron.io/p-arduino-uno-rev3-main-board">[Board]</a>
        \n [Shopee]
        \n <a href="https://shopee.com.my/product/33091591/466533399?smtt=0.19388095-1637001249.3">[Board]</a>
        \n</string>
    <string name="arduino_mega">arduino_mega</string>
    <string name="arduino_mega_textview"> <b>Arduino MEGA 2560 R3</b>
        \n Suggested Link to buy:
        \n <a href="https://store.arduino.cc/usa/mega-2560-r3">[Arduino Official]</a>
        \n [Cytron Malaysia]
        \n <a href="https://my.cytron.io/p-arduino-mega-2560-r3-main-board">[Board]</a>
        \n [Shopee]
        \n <a href="https://shopee.com.my/product/126211897/1919705808?smtt=0.19388095-1637001788.3.">[Board]</a>
        \n</string>
    <string name="arduino_nano">arduino_nano</string>
    <string name="textviewSubmenu3_1_1">1. Capacitive Resistor Piano \n
        \n <b><u>Components Needed:</u></b>
        \n - Arduino MEGA R3 2560 *1
        \n - Breadboard *1
        \n - 1M Resistor *7
        \n - Speaker *7
        \n - Male-to-Male Jumper Wire *18
        \n [Can be any speaker (buzzer, laptop speaker), just the sound quality would be different]
        \n\n <b><u>Software needed :</u></b>
        \n - Arduino IDE,
        \n - Proteus (Schematic Diagram),
        \n - Fritzing / Virtual Breadboard (Wiring Diagram).
    \n\n</string>
    <string name="textviewCoding3_1_1">





















































































    </string>
    <string name="textviewSubmenu3_1_2">\n <b><u>Schematic Diagram (Proteus)</u></b></string>
    <string name="schematic_examples3_1_1">Schematic_of_Capacitive_Resistor</string>
    <string name="textviewSubmenu3_1_3">\n <b><u>Wiring Connection (Fritzing / Virtual Breadboard): </u></b></string>
    <string name="connection_examples_3_1_1">connection_examples_3_1_1</string>
    <string name="textviewSubmenu3_1_4">\n <b><u>Video Demonstration:</u></b></string>
    <string name="video_example_1">Example 1 Video</string>
    <string name="textviewSubmenu3_1_5">2. Water Level Sensor \n
        \n <b><u>Components Needed:</u></b>
        \n - Arduino MEGA R3 2560 *1
        \n - Breadboard * 1
        \n - Water Level Sensor *4
        \n - Male-to-Male Jumper Wires *13
        \n - 5V Power Source (Powerbank, laptop port or battery)
    \n\n <b><u>Software needed :</u></b>
        \n - Arduino IDE,
        \n - Proteus (Schematic Diagram),
        \n - Fritzing / Virtual Breadboard (Wiring Diagram).
    \n\n</string>
    <string name="textViewCoding3_1_2">
        [Coding put here]
    </string>
    <string name="textviewSubmenu3_1_6">\n <b><u>Schematic Diagram (Proteus)</u></b></string>
    <string name="schematic_examples3_1_2">Schematic_of_Capacitive_Resistor</string>
    <string name="textviewSubmenu3_1_7">\n <b><u>Wiring Connection (Fritzing / Virtual Breadboard): </u></b></string>
    <string name="connection_examples_3_1_2">connection_examples_3_1_2</string>
    <string name="textviewSubmenu3_1_8">\n <b><u>Video Demonstration:</u></b></string>
    <string name="video_example_2">Example 2 Video</string>
    <string name="textviewSubmenu3_1_9">3. Countdown Timer \n
        \n <b><u>Components Needed:</u></b>
        \n - Arduino MEGA R3 2560 *1
        \n - Breadboard * 1
        \n - 7-Segment 4-Digit Common Anode (CA) Display (3461BS-1, 6 pins) *1
        \n - Push Button *4
        \n - Buzzer *1
        \n - Male-to-Male Jumper Wires *21
        \n - 5V Power Source (Powerbank, laptop port or battery)
    \n\n <b><u>Software needed :</u></b>
        \n Arduino IDE,
        \n Proteus (Schematic Diagram),
        \n Fritzing / Virtual Breadboard (Wiring Diagram).
    \n\n</string>
    <string name="textViewCoding3_1_3">[Coding put here]</string>
    <string name="textviewSubmenu3_1_10">\n <b><u>Schematic Diagram (Proteus)</u></b></string>
    <string name="schematic_examples3_1_3">Schematic_of_Capacitive_Resistor</string>
    <string name="textviewSubmenu3_1_11">\n <b><u>Wiring Connection (Fritzing / Virtual Breadboard): </u></b></string>
    <string name="connection_examples_3_1_3">connection_examples_3_1_3</string>
    <string name="textviewSubmenu3_1_12">\n <b><u>Video Demonstration:</u></b></string>
    <string name="video_example_3">Example 3 Video</string>
    <string name="comment_description">\n <u><b>Comment:</b></u></string>
    <string name="comment_example_1">Comment (Example 1)</string>
    <string name="comment_example_2">Comment (Example 2)</string>
    <string name="comment_example_3">Comment (Example 3)</string>
    <string name="comment_example_5">Comment (Example 5)</string>
    <string name="comment_example_6">Comment (Example 6)</string>
    <string name="comment_example_7">Comment (Example 7)</string>
    <string name="comment_example_8">Comment (Example 8)</string>
    <string name="textviewSubmenu3_2_5"> 2. 4-Digit 7-Segment LED Display \n
        \n <b><u>Components Needed:</u></b>
        \n- Arduino UNO R3 *1
        \n- Breadboard *1
        \n- 7-Segment 4-Digit Common Anode (CA) Display (3461BS-1, 6 pins) *1
        \n- Jumper Wire *11
        \n- 5V Power Source (Powerbank, laptop port or battery)
   \n\n <b><u>Software needed :</u></b>
        \n - Arduino IDE,
        \n - Proteus (Schematic Diagram),
        \n - Fritzing / Virtual Breadboard (Wiring Diagram).
    \n\n</string>
    <string name="textviewCoding3_2_2">








































































































































































    </string>
    <string name="textviewSubmenu3_2_6">\\n <b><u>Schematic Diagram (Proteus)</u></b></string>
    <string name="schematic_examples3_2_2">Schematic_of_4 Digit 7 Segment LED Display</string>
    <string name="textviewSubmenu3_2_7">\n <b><u>Wiring Connection (Fritzing / Virtual Breadboard): </u></b></string>
    <string name="connection_examples_3_2_2">connection_examples_3_2_2</string>
    <string name="textviewSubmenu3_2_8">\n <b><u>Video Demonstration:</u></b></string>
    <string name="video_example_5">Example 5 Video</string>
    <string name="textviewSubmenu3_2_9"> 3. Light Detecting Servo Motor \n
        \n <b><u>Components Needed:</u></b>
        \n- Arduino UNO R3 *1
        \n- Breadboard *1
        \n- Light Dependent Resistor (LDR) *2
        \n- Servo Motor *1
        \n- Jumper Wire *7
        \n- 5V Power Source (Powerbank, laptop port or battery)
    \n\n <b><u>Software needed :</u></b>
        \n - Arduino IDE,
        \n - Proteus (Schematic Diagram),
        \n - Fritzing / Virtual Breadboard (Wiring Diagram).
    \n\n</string>
    <string name="textviewSubmenu3_2_10">\n <b><u>Schematic Diagram (Proteus)</u></b></string>
    <string name="schematic_examples3_2_3">Schematic_of_4 Digit 7 Segment LED Display</string>
    <string name="textviewSubmenu3_2_11">\n <b><u>Wiring Connection (Fritzing / Virtual Breadboard): </u></b></string>
    <string name="connection_examples_3_2_3">connection_examples_3_2_2</string>
    <string name="textviewSubmenu3_2_12">\n <b><u>Video Demonstration:</u></b></string>
    <string name="video_example_6">Example 6 Video</string>
    <string name="codingtitle3_2_3">\n <b><u>Arduino Coding (Arduino IDE):</u></b> \n</string>
    <string name="textviewSubmenu3_3_1">1. Polygraph with Serial Plotter \n
    \n <b><u>Components Needed:</u></b>
        \n - Arduino NANO R3 *1
        \n - Breadboard * 1
        \n - 5mm Red LED *1
        \n - 5mm Green LED *1
        \n - Generic LED *1
        \n - 2k Resistor *1
        \n - Male-to-Male Jumper Wires * 11
        \n - 5V Power Source (Powerbank, laptop port or battery)
    \n\n <b><u>Software needed :</u></b>
        \n - Arduino IDE,
        \n - Proteus (Schematic Diagram),
        \n - Fritzing / Virtual Breadboard (Wiring Diagram).
    \n\n</string>
    <string name="textViewCoding3_3_1">[Coding put here]</string>
    <string name="textviewSubmenu3_3_2">\n <b><u>Schematic Diagram (Proteus)</u></b></string>
    <string name="schematic_examples3_3_1">Schematic_of_Capacitive_Resistor</string>
    <string name="textviewSubmenu3_3_3">\n <b><u>Wiring Connection (Fritzing / Virtual Breadboard): </u></b></string>
    <string name="connection_examples_3_3_1">connection_examples_3_3_1</string>
    <string name="textviewSubmenu3_3_4">\n <b><u>Video Demonstration:</u></b></string>
    <string name="video_example_7">Example 7 Video</string>
    <string name="textviewSubmenu3_3_5">2. Windows CPU and RAM Monitoring \n
    \n <b><u>Components Needed:</u></b>
        \n - Arduino NANO R3 *1
        \n - Breadboard * 1
        \n - 16x2 White on Blue Character LCD
        \n   with I2C / IIC Module * 1
        \n - Male-to-Female Jumper Wires * 4
        \n - 5V Power Source (Powerbank, laptop port or battery)
    \n\n <b><u>Software needed :</u></b>
        \n - Arduino IDE,
        \n - Proteus (Schematic Diagram),
        \n - Fritzing / Virtual Breadboard (Wiring Diagram).
    \n\n</string>
    <string name="textviewSubmenu3_3_6">\n <b><u>Schematic Diagram (Proteus)</u></b></string>
    <string name="schematic_examples3_3_2">Schematic_of_Capacitive_Resistor</string>
    <string name="textviewSubmenu3_3_7">\n <b><u>Wiring Connection (Fritzing / Virtual Breadboard): </u></b></string>
    <string name="connection_examples_3_3_2">connection_examples_3_3_2</string>
    <string name="textviewSubmenu3_3_8">\n <b><u>Video Demonstration:</u></b></string>
    <string name="video_example_8">Example 8 Video</string>
    <string name="codingtitle3_3_2">\n <b><u>Arduino Coding (Arduino IDE):</u></b> \n</string>
</resources>