<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/color_pink_background">

    <TextView
        android:id="@+id/textView_submenu3.1.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_1_1"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView_coding3.1.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:justificationMode="inter_word"
        android:text="@string/textviewCoding3_1_1"
        android:textColor="@color/black"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/textView_submenu3.1.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_1_2"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/schematic_examples3.1.1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/schematic_examples3_1_1"
        android:src="@drawable/schematic_examples3_2_1" />

    <TextView
        android:id="@+id/textView_submenu3.1.3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_1_3"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/connection_examples3.1.1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:contentDescription="@string/connection_examples_3_1_1"
        android:src="@drawable/connection_examples3_2_1" />

    <TextView
        android:id="@+id/textView_submenu3.1.4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autoLink="web"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_1_4"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_example_1_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_example_1"
        android:textSize="16sp"
        android:drawableStart="@drawable/youtube_icon3"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:onClick="btn_example_1_video"
        />

    <Button
        android:id="@+id/btn_comment_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_example_1"
        android:textSize="16sp" />

</LinearLayout>