<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#F2D8BFD8">

    <TextView
        android:id="@+id/textView_submenu3.2.9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_2_9"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/textView_submenu3.2.10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_2_10"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/schematic_examples3.2.3"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/schematic_examples3_2_3"
        android:src="@drawable/schematic_examples3_2_3" />

    <TextView
        android:id="@+id/textView_submenu3.2.11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_2_11"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/connection_examples_3.2.3"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:contentDescription="@string/connection_examples_3_2_3"
        android:src="@drawable/connection_examples3_2_3" />

    <TextView
        android:id="@+id/textView_submenu3.2.12"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autoLink="web"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_2_12"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_example_6_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_example_6"
        android:textSize="16sp"
        android:drawableStart="@drawable/youtube_icon3"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:foreground="?attr/selectableItemBackground"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/comment_description"/>

    <Button
        android:id="@+id/btn_comment_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_example_6"
        android:textSize="16sp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codingtitle3_2_3"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textView_coding3.2.3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:justificationMode="inter_word"
        android:textColor="#add8e6"
        android:textIsSelectable="true" />

</LinearLayout>