<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#D9D8BFD8">

    <TextView
        android:id="@+id/textView_submenu3.3.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_3_1"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView_coding3.3.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:justificationMode="inter_word"
        android:text="@string/textViewCoding3_3_1"
        android:textColor="#add8e6"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/textView_submenu3.3.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_3_2"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/schematic_examples3.3.1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/schematic_examples3_3_1"
        android:src="@drawable/schematic_examples3_2_1" />

    <TextView
        android:id="@+id/textView_submenu3.3.3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_3_3"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/connection_examples3.3.1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:contentDescription="@string/connection_examples_3_3_1"
        android:src="@drawable/connection_examples3_2_1" />

    <TextView
        android:id="@+id/textView_submenu3.3.4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autoLink="web"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_3_4"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_example_7_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_example_7"
        android:textSize="16sp"
        android:drawableStart="@drawable/youtube_icon3"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btn_comment_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_example_7"
        android:textSize="16sp"
        android:foreground="?attr/selectableItemBackground"/>

</LinearLayout>