<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#F2D8BFD8">

    <TextView
        android:id="@+id/textView_submenu3.3.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_3_5"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/textView_submenu3.3.6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_3_6"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/schematic_examples3.3.2"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/schematic_examples3_3_2"
        android:src="@drawable/schematic_examples3_3_2" />

    <TextView
        android:id="@+id/textView_submenu3.3.7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_3_7"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/connection_examples_3.3.2"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:contentDescription="@string/connection_examples_3_3_2"
        android:src="@drawable/connection_examples3_3_2" />

    <TextView
        android:id="@+id/textView_submenu3.3.8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autoLink="web"
        android:justificationMode="inter_word"
        android:text="@string/textviewSubmenu3_3_8"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_example_8_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_example_8"
        android:textSize="16sp"
        android:drawableStart="@drawable/youtube_icon3"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:autoLink="all"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btn_comment_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_example_8"
        android:textSize="16sp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codingtitle3_3_2"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textView_coding3.3.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:justificationMode="inter_word"
        android:textColor="#add8e6"
        android:textIsSelectable="true" />


</LinearLayout>